# arb-engine

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: exchanges.yaml  fees.yaml  storage.yaml  strategy.yaml
scripts/: debug_lighter_messages.py  debug_lighter_orderbook.py  debug_lighter_timestamp.py  quick_test_binance.py  quick_test_hyperliquid.py  quick_test_lighter.py  test_cex_adapters.py  test_lighter_adapter.py  verify_setup.py
src/arb_engine/adapters/cex/: binance_ws.py  bybit_ws.py  okx_ws.py
src/arb_engine/adapters/common/: base.py  symbol_map.py
src/arb_engine/adapters/perps/: hyperliquid.py  lighter.py
src/arb_engine/core/: clock.py  config.py  errors.py  logging.py  types.py
src/arb_engine/domain/: models.py  schema.py
src/arb_engine/storage/: duckdb.py  writers.py
